<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ixblue_ins</name>
  <version>0.2.0</version>
  <description>Metapackage for iXblue INS driver</description>

  <maintainer email="adrien.barral@ixblue.com">Adrien BARRAL</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins</url>>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
