<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ixblue_ins_driver</name>
  <version>0.2.0</version>
  <description>The iXblue_ins_driver package</description>

  <maintainer email="laure.le-breton@ixblue.com">Laure LE BRETON</maintainer>
  <maintainer email="romain.reignier@ixblue.com">Romain REIGNIER</maintainer>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/ixblue_ins_driver</url>

  <author email="adrien.barral@ixblue.com">Adrien BARRAL</author>
  <author email="laure.le-breton@ixblue.com">Laure LE BRETON</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ixblue_ins_msgs</depend>
  <depend>ixblue_stdbin_decoder</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_updater</depend>

<!--  the tests were not migrated for now -->
<!--  <test_depend>libpcap</test_depend>-->
<!--  <test_depend>libboost-program-options-dev</test_depend>-->
<!--  <test_depend>libboost-thread-dev</test_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
